fix header covering sidebar

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -19,7 +19,7 @@
   background-color: #f5f7fa !important;
   box-shadow: 0px 0px 5px 0px #b3b3b3 !important;
   z-index: 1300;
-  min-height: 84px;
+  height: 84px;
   letter-spacing: 1px;
   display: flex;
   flex-direction: column;
